chore(codeship): add another dependecy to test

--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     testCompile ("org.mockito:mockito-core:2.+")
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.1'
+    compile group: 'org.unbescape', name: 'unbescape', version: '1.1.0.RELEASE'
 }
