--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.validationQuery= SELECT 1
+spring.jpa.show-sql=true
