--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.validationQuery= SELECT 1
 spring.jpa.show-sql=true
+
+logging.level.com.greenfox=${LOG_LEVEL}
