--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=${DATABASE_MODIFY_ACCESS}
 spring.datasource.validationQuery= SELECT 1
 spring.jpa.show-sql=true
