--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.postgresql:postgresql')
     runtime('mysql:mysql-connector-java')
+    compile "org.flywaydb:flyway-core:4.2.0"
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     testCompile ("org.mockito:mockito-core:2.+")
