--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     testCompile ("org.mockito:mockito-core:2.+")
     testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
+    compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.1'
 }
