--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     testCompile ("org.mockito:mockito-core:2.+")
     testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.0'
+    compile 'com.auth0:java-jwt:3.2.0'
 }
