--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.flywaydb.flyway" version "4.2.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 
@@ -26,6 +30,11 @@ repositories {
     jcenter()
 }
 
+flyway {
+    url = 'jdbc:postgresql://localhost:5432/heartbeat'
+    user = 'postgres'
+    password = 'password'
+}
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
