add aop dependencies and create heartbeataspect

--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     testCompile ("org.mockito:mockito-core:2.+")
     testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.0'
+    compile group: 'aopalliance', name: 'aopalliance', version: '1.0'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.6.10'
+    compile group: 'cglib', name: 'cglib', version: '3.2.5'
+    compile group: 'org.ow2.asm', name: 'asm', version: '5.2'
 }
