--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,11 @@ flyway {
     password = 'password'
 }
 
+configurations {
+    aspectjrt
+    aspectjweaver
+}
+
 dependencies {
     compile 'io.jsonwebtoken:jjwt:0.7.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
@@ -49,8 +54,7 @@ dependencies {
     testCompile ("org.mockito:mockito-core:2.+")
     testCompile group: 'com.h2database', name: 'h2', version: '1.0.60'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.0'
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.10'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'
     compile group: 'aopalliance', name: 'aopalliance', version: '1.0'
-    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.6.10'
-    compile group: 'cglib', name: 'cglib', version: '3.2.5'
-    compile group: 'org.ow2.asm', name: 'asm', version: '5.2'
 }
