--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ configurations {
 }
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-hateoas")
     compile group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
     compile 'io.jsonwebtoken:jjwt:0.7.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
